--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -142,7 +142,7 @@ body {
 }
 
 .link{
-  color: #7b92e9;
+  color: #abb9e9;
   text-decoration: none;
 }
 
