--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -99,7 +99,7 @@ body {
 }
 
 .link{
-  color: #7b92e9;
+  color: #abb9e9;
   text-decoration: none;
 }
 
